update mastery
