# src/main/resources/api-contracts/api-contracts.yaml
@@ -28,6 +28,8 @@ tags:
     description: Operations related to League of Legends summoners.
   - name: Teamfight Tactics Summoner
     description: Operations related to Teamfight Tactics summoners.
+  - name: League of Legends Mastery
+    description: Operations related to League of Legends masteries.
 
 paths:
   /language:
@@ -74,6 +76,8 @@ paths:
     $ref: './controllers/lol/lol-board.yaml#/addSummonerToBoard'
   /lol/board:
     $ref: './controllers/lol/lol-board.yaml#/createBoard'
+  /lol/mastery/{puuid}:
+    $ref: './controllers/lol/lol-mastery.yaml#/getAndUpdateMasteries'
 
 components:
   schemas:
@@ -827,3 +831,44 @@ components:
           type: string
           description: The name of the board.
           example: "My Custom Board"
+    LOLMasteriesDTO:
+      type: object
+      properties:
+        puuid:
+          type: string
+          description: Unique identifier for the player.
+          example: "a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6"
+        champions:
+          type: array
+          items:
+            $ref: '#/components/schemas/LOLMasteryDTO'
+      required:
+        - puuid
+        - champions
+    LOLMasteryDTO:
+      type: object
+      properties:
+        level:
+          type: integer
+          format: int32
+          description: The mastery level of the champion
+          example: 7
+        points:
+          type: integer
+          format: int32
+          description: The total mastery points for the champion
+          example: 250000
+        champion:
+          type: string
+          description: The ID of the champion
+          example: "Yasuo"
+        lastPlayTime:
+          type: string
+          format: date-time
+          description: The last time the champion was played
+          example: "2024-06-28T10:30:00Z"
+      required:
+        - level
+        - points
+        - champion
+        - lastPlayTime
